<resources>
    <string name="app_name">Lirael</string>
    <string name="app_description">Your pocket kitt(ch)en helper &#128571;</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_recipes">Recipes</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_settings">Settings</string>
    <string name="title_summary">Summary</string>
    <string name="title_about">About</string>
    <string name="title_premium">Premium</string>
    <string name="title_subscription">Subscription</string>
    <string name="title_nutrition">Nutrition statistics</string>
    <string name="confirm_exit_dialog_title">Confirm exit</string>
    <string name="confirm_exit_dialog_description">Are you sure you want to exit?</string>
    <string name="confirm_exit_dialog_show">Never show this again</string>
    <string name="confirm_exit_dialog_button_positive">Sure</string>
    <string name="confirm_exit_dialog_button_negative">Nope</string>
    <string name="dark_mode_settings">Dark mode</string>
    <string name="title_settings_profile">Profile Settings</string>
    <string name="user_default_name">Guest</string>
    <string name="stat_greetings">Welcome %s!</string>
    <string name="stat_section_title_recipes">Recipes</string>
    <string name="stat_section_title_random">Get Inspired</string>
    <string name="stat_section_title_more">More details</string>
    <string name="stat_card_text_opened">Opened</string>
    <string name="stat_card_text_saved">Saved</string>
    <string name="stat_card_text_cooked">Cooked</string>
    <string name="stat_read_error">Failed to read your statistics :(</string>
    <string name="stat_update_error">Failed to update your statistics :(</string>
    <string name="snackbar_error_retry">Retry</string>
    <string name="user_deletion_completed">You successfully deleted yourself</string>
    <string name="user_deletion_error">Something went wrong during user deletion</string>
    <string name="confirm_deletion_dialog_title">Confirm Deletion</string>
    <string name="confirm_deletion_dialog_description">Are you sure you want to delete everything?</string>
    <string name="onboarding_button_next">Next</string>
    <string name="onboarding_button_skip">Skip</string>
    <string name="onboarding_button_finish">Finish</string>
    <string name="onboarding_welcome_title">Welcome</string>
    <string name="onboarding_welcome_subtitle">Your on the best way to become the next chef!</string>
    <string name="onboarding_welcome_description">Home cook or professional. Does it matter?\n<b>What is really important to learn and love cooking.</b>\n\n<u>And we, the kittens, are here to help!\n\n</u><b>Please, accept Terms and Conditions, so we can get through the boring part and start the real deal. &#128572;</b></string>
    <string name="onboarding_welcome_terms_link"><u>Open Terms and Conditions</u></string>
    <string name="onboarding_welcome_terms_accept">Accept Terms and Conditions</string>
    <string name="onboarding_welcome_error_user_creation">Failed to create YOU! PLease, try again later!</string>
    <string name="onboarding_name_title">Introduction</string>
    <string name="onboarding_name_subtitle">How can we call you?</string>
    <string name="onboarding_name_description">We only save this locally.\nSo, surely you can give us any name.\n\nOr nothing and be our guest! &#128573;</string>
    <string name="onboarding_name_hint">Your name</string>
    <string name="onboarding_name_helper">Give something nice or leave it like that ;)</string>
    <string name="onboarding_diet_title">Diet Info</string>
    <string name="onboarding_diet_subtitle">Do you follow any diet?</string>
    <string name="onboarding_diet_description"><![CDATA[Currently we can\'t and don\'t do anything with this information. But we planning to.\n\nGive it if you want and see what happens. &#128568;]]></string>
    <string name="onboarding_premium_title">Premium</string>
    <string name="onboarding_premium_subtitle">Do you interested in premium features?</string>
    <string name="onboarding_premium_description">More recipes, better instructions, real filtering by diet and food allergy, custom recipe sharing and shopping list creation.\n\nThose are costing money…\n\n<i>Perhaps this is too early to ask. You can set it later if you change your mind.\n\nThese cats will love you anyway.</i> &#128571;</string>
    <string name="onboarding_button_premium_positive">Sure</string>
    <string name="onboarding_button_premium_negative">Nope</string>
    <string name="onboarding_button_premium_neutral">Not sure</string>
    <string name="input_text_error">Should contains at least one letter and no space!</string>
    <string name="recipe_card_ingredients">%d ingredients</string>
    <string name="recipe_card_instructions">%d instructions</string>
    <string name="recipe_card_steps">%d steps</string>
    <string name="recipes_read_error">Failed to read recipes :(</string>
    <string name="search_recipe_hint">Search recipes</string>
    <string name="search_recipes_helper">Give an ingredient (like tomato) or part of the recipe\'s name (e.g. pasta) and let\'s cook something ;)</string>
    <string name="recipes_section_title_pick">Pick from presets</string>
    <string name="recipes_section_title_search">Find something new</string>
    <string name="search_recipes_button">Search</string>
    <string name="recipes_not_found_error">Couldn\'t find any recipe with the given keyword :(</string>
    <string name="cooking_summary_error">Failed to show cooking summary :(</string>
    <string name="cooking_summary_button">Let\'s cook</string>
    <string name="cooking_summary_title_ingredients">Ingredients</string>
    <string name="cooking_step">%d/%d steps</string>
    <string name="cooking_step_button_positive">Save &amp; done</string>
    <string name="cooking_step_button_neutral">Done</string>
    <string name="cooking_step_button_negative">Stop cooking</string>
    <string name="cooking_step_recipe_not_found">Recipe not found</string>
    <string name="cooking_step_instruction_not_found">Instruction not found :(</string>
    <string name="favourite_read_error">Failed to read favourite recipe(s) :(</string>
    <string name="favourite_save_error">Failed to save favourite recipe :(</string>
    <string name="favourite_delete_error">Failed to delete favourite recipe :(</string>
    <string name="about_section_title">About Lirael</string>
    <string name="about_section_description">Lirael is created in my free time, to show my professional knowledge in the Android field. It is not meant to be used by millions of users but prepared for it. If I have time I\'ll continue working on it because I have some nice ideas to make it more efficient and better. Those are costing money that\'s why the sign of subscription model. However, Lireal will be always free to use at this level.</string>
    <string name="about_app_version">App version: &lt;b>%s&lt;/b> (tap to copy)</string>
    <string name="about_store_page"><u>Open Google Play Store page</u></string>
    <string name="about_terms"><u><![CDATA[Open T&C]]></u></string>
    <string name="credits_section_title">Credits</string>
    <string name="credits_section_description">Chef cats during onborading - pngtree\n
Chef cats during instructions - Hansuan_Fabregas (Pixabay)
Error cats - ???\n
Confetti animation - Sammie Ho (lottiefiles)\n
T&amp;C generator - Nishant (nisrulz.com)</string>
    <plurals name="calendar_day_cooked_info">
        <item quantity="one">%d time cooked on %s %s</item>
        <item quantity="other">%d times cooked on %s %s</item>
    </plurals>
</resources>
