<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@+id/statistics_fragment">

    <activity
        android:id="@+id/main_activity"
        android:name="dev.anmatolay.lirael.presentation.MainActivity"
        tools:layout="@layout/activity_main">
    </activity>

    <fragment
        android:id="@+id/statistics_fragment"
        android:name="dev.anmatolay.lirael.presentation.statistics.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/recipes_fragment"
        android:name="dev.anmatolay.lirael.presentation.recipes.RecipesFragment"
        android:label="@string/title_recipes"
        tools:layout="@layout/fragment_recipes" />

    <fragment
        android:id="@+id/favourites_fragment"
        android:name="dev.anmatolay.lirael.presentation.favourites.FavouritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favourites" />

    <fragment
        android:id="@+id/custom_fragment"
        android:name="dev.anmatolay.lirael.presentation.custom.CustomFragment"
        android:label="@string/title_custom"
        tools:layout="@layout/fragment_custom" />

    <fragment
        android:id="@+id/settings_container_fragment"
        android:name="dev.anmatolay.lirael.presentation.settings.SettingsContainerFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_container_settings" />

    <action
        android:id="@+id/action_to_settingsContainerFragment"
        app:destination="@id/settings_container_fragment" />
</navigation>
