<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/m3_dialog_margin"
    android:background="@drawable/bg_rounded_corner">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/m3_dialog_icon_size"
        android:layout_height="@dimen/m3_dialog_icon_size"
        android:layout_margin="@dimen/m3_dialog_margin"
        android:src="@drawable/ic_dialog_waving_hand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/m3_dialog_margin"
        android:text="@string/confirm_exit_dialog_title"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/m3_dialog_margin"
        android:text="@string/confirm_exit_dialog_description"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/m3_dialog_margin"
        android:textAppearance="?attr/textAppearanceBody2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        android:text="@string/confirm_exit_dialog_show"/>

    <Button
        android:id="@+id/negative_button"
        style="?attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/m3_dialog_margin"
        android:text="@string/confirm_exit_dialog_button_negative"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/positive_button"
        app:layout_constraintTop_toBottomOf="@id/checkbox" />

    <Button
        android:id="@+id/positive_button"
        style="?attr/materialButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/m3_dialog_margin"
        android:text="@string/confirm_exit_dialog_button_positive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox" />

</androidx.constraintlayout.widget.ConstraintLayout>
