<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_16dp"
        android:text="@string/onboarding_premium_title"
        android:textAppearance="?attr/textAppearanceHeadline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_16dp"
        android:padding="@dimen/spacing_8dp"
        android:text="@string/onboarding_premium_subtitle"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_16dp"
        android:gravity="center"
        android:padding="@dimen/spacing_8dp"
        android:text="@string/onboarding_premium_description"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="center"
        app:layout_constraintBottom_toTopOf="@+id/positive_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        tools:ignore="ContentDescription"
        tools:src="@drawable/cat_onboarding_premium" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/positive_button"
        style="?attr/materialButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_8dp"
        android:text="@string/onboarding_button_premium_positive"
        app:layout_constraintBottom_toTopOf="@+id/negative_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="320dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/negative_button"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_8dp"
        android:text="@string/onboarding_button_premium_negative"
        app:layout_constraintBottom_toTopOf="@+id/neutral_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="320dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/neutral_button"
        style="?attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_8dp"
        android:text="@string/onboarding_button_premium_neutral"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="320dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
