<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_8dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/about_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_8dp"
        android:text="@string/about_section_title"
        android:textAppearance="?attr/textAppearanceOverline"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/about_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_section_description"
        android:textAppearance="?attr/textAppearanceBody2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_title" />

    <LinearLayout
        android:id="@+id/app_version_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_description">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/spacing_8dp"
            android:background="?android:listDivider" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_8dp"
            android:layout_marginTop="@dimen/spacing_16dp"
            android:text="@string/about_app_version"
            android:textAppearance="?attr/textAppearanceBody2"
            tools:text="App version: 1.0.0 (tap to copy)" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/store_page_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_description">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/spacing_8dp"
            android:background="?android:listDivider" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_8dp"
            android:layout_marginTop="@dimen/spacing_16dp"
            android:text="@string/about_store_page"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?attr/colorPrimary" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/spacing_8dp"
        android:background="?android:listDivider" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/credit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_16dp"
        android:text="@string/credits_section_title"
        android:textAppearance="?attr/textAppearanceOverline"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/credit_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credits_section_description"
        android:textAppearance="?attr/textAppearanceBody2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_title" />
</LinearLayout>
