<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.recipes.RecipesFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/recipes_pick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_16dp"
        android:layout_marginStart="8dp"
        android:text="@string/recipes_section_title_pick"
        android:textAppearance="?attr/textAppearanceOverline"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipes_pick">

        <include
            android:id="@+id/recipe_categories"
            layout="@layout/layout_recipe_categories" />
    </FrameLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/recipes_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_16dp"
        android:layout_marginStart="8dp"
        android:text="@string/recipes_section_title_search"
        android:textAppearance="?attr/textAppearanceOverline"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_24dp"
        android:hint="@string/search_recipe_hint"
        android:textColorHint="?attr/colorPrimaryVariant"
        app:helperText="@string/search_recipes_helper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipes_search"
        app:layout_constraintWidth_max="488dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
