<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_16dp"
        android:text="@string/onboarding_welcome_title"
        android:textAppearance="?attr/textAppearanceHeadline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_16dp"
        android:padding="@dimen/spacing_8dp"
        android:text="@string/onboarding_welcome_subtitle"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_16dp"
        android:gravity="center"
        android:padding="@dimen/spacing_8dp"
        android:text="@string/onboarding_welcome_description"
        android:textAppearance="?attr/textAppearanceBody2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="center"
        app:layout_constraintBottom_toTopOf="@+id/term_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        tools:ignore="ContentDescription"
        tools:src="@drawable/cat_onboarding_welcome" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/term_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_32dp"
        android:fontFamily="@font/ubuntu_medium"
        android:padding="@dimen/spacing_8dp"
        android:text="@string/onboarding_welcome_terms_accept"
        android:textAppearance="?attr/textAppearanceOverline"
        android:textColor="?attr/colorPrimaryVariant"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/term_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:switchPadding="@dimen/spacing_16dp" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/term_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_24dp"
        android:text="@string/onboarding_welcome_terms_link"
        android:textAppearance="?attr/textAppearanceCaption"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
